# entities/transaction.go
@@ -38,13 +38,15 @@ type Transaction struct {
 	CreatedAt time.Time
 	UpdatedAt time.Time
 
-	UUID                 uuid.UUID         `gorm:"type:uuid;primaryKey;not null"`
-	RelatedTransactionID *uint             `gorm:"index"`
-	Type                 TransactionType   `gorm:"type:varchar(20);not null"`
-	Status               TransactionStatus `gorm:"type:varchar(20);not null"`
-	Amount               float64           `gorm:"type:numeric(18,4);not null"`
-	PaymentMethod        string            `gorm:"type:varchar(50)"`
+	UUID          uuid.UUID         `gorm:"type:uuid;primaryKey;not null"`
+	Type          TransactionType   `gorm:"type:varchar(20);not null"`
+	Status        TransactionStatus `gorm:"type:varchar(20);not null"`
+	Amount        float64           `gorm:"type:numeric(18,4);not null"`
+	PaymentMethod string            `gorm:"type:varchar(50)"`
 
 	WalletID uint `gorm:"not null"`
-	Wallet   Wallet
+	Wallet   *Wallet
+
+	RelatedTransactionID *uuid.UUID   `gorm:"index"`
+	RelatedTransaction   *Transaction `gorm:"foreignKey:RelatedTransactionID;references:UUID"`
 }
